added commands for compile and run