@@ -3,3 +3,6 @@
 Miro Link: [here](https://miro.com/app/board/uXjVIZ-dYXQ=/)
 
 Group project
+
+javac --module-path ".\lib\javafx\lib" --add-modules javafx.controls,javafx.fxml -d bin src/*.java src/board/*.java src/fxml/*.java src/player/*.java src/tile/*.java
+java --module-path ".\lib\javafx\lib" --add-modules javafx.controls,javafx.fxml -cp classFiles Main
